# nli_by_gpt

./: .gitignore  README.md  pyproject.toml
src/nli_by_gpt/: __init__.py  gpt_client.py  make_prompt.py  use_gpt_api.py
src/nli_by_gpt/analysis/: analysis.py  check_deep_case_consistency.py  check_inference_patern.py  combine_result.py  for_three_methods_analysis.py  make_both_true_false_only_true_file.py  test.py
src/nli_by_gpt/calc/: calc.py  calc_for_combined_json.py  calc_for_ensembled_json.py  calc_for_three_methods.py  read_file.py
src/nli_by_gpt/datas/: text_deepCased_sentences.json
src/nli_by_gpt/do_ensemble/: do_ensemble.py
src/nli_by_gpt/logAndResult/11_25/: log.txt
src/nli_by_gpt/logAndResult/gpt-4o-mini/part1/nodeep/: output.json  result.txt
src/nli_by_gpt/logAndResult/gpt-4o/part1/analysis/: both_true.json  withdeep_only_true.json
src/nli_by_gpt/logAndResult/gpt-4o/part1/nodeep/: res_log.txt
src/nli_by_gpt/logAndResult/gpt-4o_part2/nodeep/: output.json  res_log.txt  result.txt
src/nli_by_gpt/logAndResult/gpt-4o_part2/withdeep/: output.json  res_label_log.txt  result.txt  set_up_of_test.txt
src/nli_by_gpt/logAndResult/gpt-4o_part3/nodeep/: output.json  res_label_log.txt  result.txt  set_up_of_test.txt
src/nli_by_gpt/logAndResult/gpt-4o_part3/withdeep/: output.json  res_log.txt  result.txt
src/nli_by_gpt/logAndResult/jsnli/gpt-4o/nodeep/: result.txt  (+2 more)
src/nli_by_gpt/use_gpt_api/: check_json_or_jsonl.py  gpt_client.py  make_file_or_path.py  make_file_path.py  make_prompt.py  read_file.py  response_to_resultJson.py  test.py  use_gpt_api.py
(+103 files in other folders)
